--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "About Julian day.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "julian"
   ],
   "author": "Sanwan Dong",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "@behaver/calc-ut-delay": "^1.0.0"
   }
 }
